# x12-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
tests/: __init__.py  conftest.py  hypothesis_profiles.py
tests/compliance/: __init__.py  test_hipaa.py
tests/fixtures/edi/: .gitkeep
tests/integration/: __init__.py  test_837p_flow.py  test_850_flow.py  test_acknowledgments.py
tests/performance/: __init__.py  test_benchmarks.py
tests/property/: strategies.py  test_roundtrip.py
tests/unit/: test_codes.py  test_delimiters.py  test_extended_codes.py  test_extended_schemas.py  test_generator.py  test_loop_builder.py  test_models.py  test_schema.py  test_segment_parser.py  test_tokenizer.py  test_trading_partners.py  test_validator.py
x12/: __init__.py
x12/acknowledgments/: __init__.py  generator.py
x12/codes/: __init__.py  registry.py  validators.py
x12/core/: __init__.py  delimiters.py  generator.py  loop_builder.py  parser.py  tokenizer.py  validator.py
x12/models/: __init__.py  envelope.py  loop.py  segment.py
x12/schema/: __init__.py  definitions.py  loader.py
x12/streaming/: __init__.py  reader.py
x12/trading_partners/: __init__.py  config.py
x12/transactions/: __init__.py
x12/transactions/healthcare/: __init__.py  models.py
x12/transactions/supply_chain/: __init__.py  models.py
